--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -1,4 +1,5 @@
 {
     "title": "Мое приложение",
-    "delete_text": "Удалить"
+    "delete_text": "Удалить",
+    "part1_text": "Часть 1 работает!"
 }
